<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_bright"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="HỒ SƠ DOANH NGHIỆP"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtTenDoanhNghiep"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/text_txtTenDoanhNghiep_fragment_hosodoanhnghiep"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edtTenDoanhNghiep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_edtTenDoanhNghiep_fragment_hosodoanhnghiep"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtTenQuocTe"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/text_txtTenQuocTe_fragment_hosodoanhnghiep"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edtTenQuocTe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_edtTenQuocTe_fragment_hosodoanhnghiep"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtTenVietTat"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/text_txtTenVietTat_fragment_hosodoanhnghiep"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/edtTenVietTat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_edtTenVietTat_fragment_hosodoanhnghiep"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtDienThoai"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/text_txtDienThoai_fragment_hosodoanhnghiep"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edtDienThoai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_edtDienThoai_fragment_hosodoanhnghiep"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtFax"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/text_txtFax_fragment_hosodoanhnghiep"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edtFax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_edtFax_fragment_hosodoanhnghiep"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/text_txtEmail_fragment_hosodoanhnghiep"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_edtEmail_fragment_hosodoanhnghiep"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtWebsite"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/text_txtWebsite_fragment_hosodoanhnghiep"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edtWebsite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_edtWebsite_fragment_hosodoanhnghiep"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtLinhVuc"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/text_txtLinhVuc_fragment_hosodoanhnghiep"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edtLinhVuc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_edtLinhVuc_fragment_hosodoanhnghiep"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtNganhNghe"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/text_txtNganhNghe_fragment_hosodoanhnghiep"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edtNganhNghe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_edtNganhNghe_fragment_hosodoanhnghiep"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtMaCK"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/text_txtMaCK_fragment_hosodoanhnghiep"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edtMaCK"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_edtMaCK_fragment_hosodoanhnghiep"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtSanGiaoDich"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_txtSanGiaoDich_fragment_hosodoanhnghiep"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edtSanGiaoDich"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_edtSanGiaodich_fragment_hosodoanhnghiep"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtNgayNiemYet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_txtNgayNiemYet_fragment_hosodoanhnghiep"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edtNgayNiemYet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_edtNgayNiemYet_fragment_hosodoanhnghiep"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtLichSuHinhThanh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Lịch sử hình thành:"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edtLichSuHinhThanh"
        android:layout_width="match_parent"
        android:layout_height="103dp"
        android:ems="10"
        android:hint="@string/text_txtLichSuHinhThanh_fragment_hosodoanhnghiep"
        android:inputType="textMultiLine" />
</LinearLayout>